--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav ul li a:hover {
 	justify-content: space-between;
 	align-items: center;
 	margin: 100px 0;
+	flex-wrap: wrap;
 }
 
 .col-1 {
@@ -60,8 +61,11 @@ nav ul li a:hover {
 }
 
 .col-1 h3 {
-    font-size: 110px;
+    font-size: 100px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
 }
 span{
     color: gold;
@@ -118,6 +122,7 @@ button:hover {
 
 .about-text {
 	flex-wrap: wrap;
+	flex-direction: row;
 	text-align: justify;
 	font-family: sans-serif;
 	padding: 10px;
@@ -224,7 +229,7 @@ h6 {
 @media only screen and (max-width: 700px) {
 	nav ul {
 		width: 100%;
-		background: linear-gradient(#1d1b1c, #d0da08);
+		background-color: rgba(182, 161, 9, 0.578);
 		position: absolute;
 		top: 80px;
 		right: 0;
